Mon Aug 16 10:19:52 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Deployment/Handlers/Home_Handler.cpp:
          Initialise pointers to 0

        * ciao/Deployment/Handlers/Homed_Component_Handler.cpp:
          Fixed crash when ciao logging was enabled

Mon Aug 16 09:47:50 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * docs/OMG-CCM-Tutorial.pptx
        Add uses multiple sheets to AMI4CCM.

Mon Aug 16 09:35:50 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Deployment/Handlers/CIAO_State.cpp:
          Use _nil() instead of 0

        * ciao/Deployment/Handlers/Component_Handler.cpp:
          Reduced scope of a _var and check if it is not nill

Sun Aug 15 18:14:00 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Deployment/Handlers/Container_Handler.cpp:
          Fixed invalid check for nil object reference

        * connectors/dds4ccm/impl/DomainParticipantFactory_T.cpp:
          Added log line just before we call delete_participant on DDS

Sun Aug 15 10:27:17 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Containers/Session/Session_Container.cpp:
          Fixed some refcount problems

Sat Aug 14 18:15:53 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DomainParticipantFactory_T.cpp:
        * connectors/dds4ccm/impl/DomainParticipant_T.cpp:
        * connectors/dds4ccm/impl/Publisher_T.cpp:
        * connectors/dds4ccm/impl/Subscriber_T.cpp:
          Corrected error levels and use some DEBUG macros instead of ERROR

Fri Aug 13 15:47:22 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * connectors/dds4ccm/examples/Shapes/models/Shapes-complete-delegation.xme:

          Example illustrating delegation.

Fri Aug 13 06:07:23 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * connectors/dds4ccm/models/dds4ccm.xme:

          Re-generated dds4ccm library since some of the elements